--- a/public/src/scss/style.scss
+++ b/public/src/scss/style.scss
@@ -29,16 +29,24 @@ html
 			list-style: none;
 			li.post{
 				display: inline-block;
-				width: 290px;
+				width: 270px;
 				height: 120px;
 				overflow: hidden;
 				margin: 0px;
+				a{
+					height: 100px;
+					margin-top: 10px;
+					display: inline-block;
+					overflow: hidden;
+					img{
+						position: relative;
+						top: -20%;
+						padding: 10px;
+					}
 
-				img{
-					position: relative;
-					top: -50px;
-					padding: 20px;
 				}
+
+				
 			}
 		}
 
